# rra-climate-aggregates

./: .cruft.json  .gitignore  README.md  mkdocs.yml  pyproject.toml  pyproject.toml.rej
src/rra_climate_aggregates/: cli.py  cli_options.py  constants.py  data.py  utils.py
src/rra_climate_aggregates/aggregate/: __init__.py  runner.py  utils.py
tests/: test_rra_climate_aggregates.py
