[tool.poetry]
name = "rra-climate-aggregates"
version = "0.0.1"
description = "Population-weighted aggregates of climate variables."
authors = [
    "James Collins <collijk@uw.edu>",
]
license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://collijk.github.io/rra-climate-aggregates"
homepage = "https://collijk.github.io/rra-climate-aggregates"
repository = "https://github.com/collijk/rra-climate-aggregates"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "rra_climate_aggregates", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
click = "*"
geopandas = "^1.0.1"
rasterra = "^0.6.1"
xarray = "^2025.1.2"
shapely = "^2.0.7"
rioxarray = "^0.18.2"
pyarrow = "^19.0.1"
pyyaml = "^6.0.2"
netcdf4 = "^1.7.2"
tqdm = "^4.67.1"
rra-tools = "^1.0.23"

[tool.poetry.group.dev.dependencies]
mkdocstrings = {version = "*", extras = ["python"]}
mkdocs-material = "*"
mkdocs-table-reader-plugin = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
mypy = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
ruff = "*"
types-shapely = "^2.0.0.20250202"
types-pyyaml = "^6.0.12.20241230"
types-tqdm = "^4.67.0.20241221"
pandas-stubs = "^2.2.3.241126"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
carun = "rra_climate_aggregates.cli:carun"
catask = "rra_climate_aggregates.cli:catask"

[tool.ruff]
target-version = "py310" # The lowest supported version

[tool.ruff.lint]
# By default, enable all the lint rules.
# Add to the ignore list below if you don't want some rules.
# If you need some ignores for certain modules, see tool.ruff.lint.per-file-ignores below.
# For individual ignore cases, prefer inline `# noqa`s within the code.
select = ["ALL"]
ignore = [
    "COM812",   # flake8 missing trailing comma, formatter handles
    "ISC001",   # Implicit string concatenation
    "ANN",      # Type hints related, let mypy handle these.
    "D",        # Docstrings related, way too strict to our taste
    "RUF007",   # zip is idiomatic, this is a dumb check
    "RET505",   # Else after return, makes a lot of false positives
    "E501",     # Line too long, this is autoformatted
    "RET504",   # Uneccesary assignment before return, this helps in debugging
    "PLR0913",  # Too many arguments, this is a bad fit for pipelines
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # "Use of `assert` detected"
    "ARG",      # "Unused function argument". Fixtures are often unused.
    "S105",     # "Possible hardcoded password".
]
"scripts/**" = [
    "INP001",   # "Scripts are not part of a package."
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
addopts = """\
    --cov rra_climate_aggregates \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
# This is the global mypy configuration.
# Avoid changing this!
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "affine.*",
    "geopandas.*",
]
ignore_missing_imports = true
